<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="50dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/naudotojovardas"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/naudotojoslaptazodis"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:inputType="textPassword"
        android:hint="@string/login_password" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:textSize="15dp"
        android:text="@string/login_checkbox" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/loginbatonas"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/login_login_btn"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/login_register_btn"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>